# iota-hackathon

./: .gitignore  Move.toml  README.md  mint-nft.js  mint-slash.js  next.config.mjs  nft-badge-demo.js  package-lock.json  package.json  setup-badge-system.js  setup-new-system.js
components/: AttendanceSummary.js  AttendanceVerification.js  DIDDisplay.js  FaceCamera.js  FaceVerificationSystem.js  Navbar.js  RealDIDCreation.js  RegistrationFaceScanner.js  StrongholdDIDCreation.js  TechnicalDetails.js  UserRegistrationForm.js  VerificationResults.js  WalletDIDCreation.js  signinverification.js
counter_package/: Move.toml
examples/: createLocked.js
extra/: setup-new-system.js  test-fixed-badges.js
gas-station/: README.md
gas_station_client/: Cargo.toml
gas_station_client/src/: main.rs
lib/: iota-identity-real.js  iota-identity-stronghold.js  iota-identity.js  iota-stronghold-storage.js
pages/: _app.js  all.js  attendance.js  counter.js  index.js  nft.js  notarization.js  scan.js  signin.js  summary.js  test.js
scripts/: runCreateLocked.js  test-iota-identity-imports.js  test-jwk-fix.js  test-jwk-memstore.js  test-stronghold-recovery.js  test-stronghold.js
sources/: allowlist_rule.move  attendance_integration.move  attendance_nft.move  attendance_system.move  attendance_tests.move  attendance_token.move  community_token.move  first_package.move  university_rule.move
sponsored_transactions_packages/: Move.toml
utils/: biometricFeatures.js  buyNFT.js  dataEncoding.js  faceComparison.js  faceDetection.js  faceGeometry.js  faceProcessing.js  mathUtils.js  (+4 more)
(+23 files in other folders)
