[package]
name = "gas_station_client"
version = "0.1.0"
edition = "2024"

[dependencies]
iota-gas-station = { git = "https://github.com/iotaledger/gas-station" }
iota-sdk = { git = "https://github.com/iotaledger/iota", tag = "v0.10.3-rc", package = "iota-sdk" }
iota-config = { git = "https://github.com/iotaledger/iota", tag = "v0.10.3-rc", package = "iota-config" }
iota-types = { git = "https://github.com/iotaledger/iota", tag = "v0.10.3-rc", package = "iota-types" }
iota-json-rpc-types = { git = "https://github.com/iotaledger/iota", tag = "v0.10.3-rc", package = "iota-json-rpc-types" }
tokio = { version = "1.43", features = ["full"] }
dotenv = "0.15"
bcs = "0.1.4"